Make window()/setWindow() work without a job, for the case of askDeleteConfirmation

BUG: 334648